[gd_scene load_steps=7 format=3 uid="uid://chkhypr8v0lao"]

[ext_resource type="Script" path="res://GUI/Pause/pause.gd" id="1_561p4"]
[ext_resource type="Texture2D" uid="uid://b0rn5drtulvqt" path="res://Sprites/flag.svg" id="1_fefnc"]
[ext_resource type="Texture2D" uid="uid://dxc44ss034i8i" path="res://Sprites/3545435.png" id="2_vnl0j"]
[ext_resource type="AudioStream" uid="uid://btli8aeprjwmn" path="res://Audio/bong_001.ogg" id="3_c0wbw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pd6xu"]
bg_color = Color(1, 1, 1, 1)
shadow_offset = Vector2(-4, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5lut6"]
bg_color = Color(1, 1, 1, 1)

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_561p4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pd6xu")

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(55, 87)
layout_mode = 0
offset_left = 8.0
offset_right = 63.0
offset_bottom = 87.0
focus_mode = 0
theme_override_font_sizes/font_size = 64
icon = ExtResource("2_vnl0j")
flat = true
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5lut6")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(55, 87)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 64
icon = ExtResource("2_vnl0j")
flat = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
columns = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_fefnc")
expand_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0/10"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer2/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_fefnc")
expand_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0/10"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer3/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_fefnc")
expand_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0/10"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer4"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer4/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("1_fefnc")
expand_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/GridContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0/10"

[node name="Spacer8" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Menu" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 72
text = "Menu"

[node name="Spacer2" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="AudioButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Audio"
flat = true

[node name="Spacer3" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="VibrationButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Vibration"
flat = true

[node name="Spacer4" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="DiscoColorsButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Disco colors"
flat = true

[node name="Spacer10" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="AnimationsButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Animations"
flat = true

[node name="Spacer5" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ShowTimerButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Show timer"
flat = true

[node name="Spacer6" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ShowMinesButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Show mines left"
flat = true

[node name="Spacer7" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="DarkThemeButton" type="CheckButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Dark theme"
flat = true

[node name="Spacer9" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_c0wbw")
volume_db = -20.0

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/AudioButton" to="." method="_on_audio_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VibrationButton" to="." method="_on_vibration_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/DiscoColorsButton" to="." method="_on_disco_colors_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/AnimationsButton" to="." method="_on_animations_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ShowTimerButton" to="." method="_on_show_timer_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/ShowMinesButton" to="." method="_on_show_mines_button_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/DarkThemeButton" to="." method="_on_dark_theme_button_toggled"]
